--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "immer": "^8.0.0",
     "react": "^17.0.1",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.0",
