--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
